--- a/index.html
+++ b/index.html
@@ -1,28 +1,32 @@
 <!DOCTYPE html>
 <html lang="tr">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Özel okul eğitim ve yemek ücreti hesaplama aracı. Farklı ödeme seçenekleri ile indirimli fiyatları görün.">
+    <meta name="description"
+        content="Özel okul eğitim ve yemek ücreti hesaplama aracı. Farklı ödeme seçenekleri ile indirimli fiyatları görün.">
     <title>Özel Okul Ücreti Hesaplama</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="background-animation">
         <div class="blob blob-1"></div>
         <div class="blob blob-2"></div>
         <div class="blob blob-3"></div>
     </div>
-    
+
     <div class="container">
         <header class="header">
             <div class="logo">
-                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                    <path d="M22 10v6M2 10l10-5 10 5-10 5z"/>
-                    <path d="M6 12v5c3 3 9 3 12 0v-5"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <path d="M22 10v6M2 10l10-5 10 5-10 5z" />
+                    <path d="M6 12v5c3 3 9 3 12 0v-5" />
                 </svg>
             </div>
             <h1>Özel Okul Ücreti Hesaplama</h1>
@@ -35,7 +39,7 @@
                     <span class="section-icon">📊</span>
                     Geçmiş Yıl Bilgileri
                 </h2>
-                
+
                 <div class="input-group">
                     <label for="prevEducationFee">
                         <span class="label-icon">📚</span>
@@ -48,23 +52,13 @@
                 </div>
 
                 <div class="input-group">
-                    <label for="prevMealFee">
-                        <span class="label-icon">🍽️</span>
-                        Önceki Yıl Yemek Ücreti (₺)
-                    </label>
-                    <div class="input-wrapper">
-                        <input type="number" id="prevMealFee" placeholder="Örn: 25000" min="0" step="0.01">
-                        <span class="currency-symbol">₺</span>
-                    </div>
-                </div>
-
-                <div class="input-group">
                     <label for="newMealFee">
                         <span class="label-icon">🍴</span>
                         Yeni Yıl Yemek Ücreti (₺)
                     </label>
                     <div class="input-wrapper">
-                        <input type="number" id="newMealFee" placeholder="Örn: 35000" min="0" step="0.01">
+                        <input type="number" id="newMealFee" placeholder="Örn: 35000" min="0" step="0.01"
+                            value="135000">
                         <span class="currency-symbol">₺</span>
                     </div>
                 </div>
@@ -218,4 +212,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
